# agentic_ai_repo

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  docker-compose.yml  setup.ps1  setup.sh
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/sign-in/[[...sign-in]]/: page.tsx
frontend/src/app/sign-up/[[...sign-up]]/: page.tsx
orchestrator/: Cargo.toml  Dockerfile
orchestrator/migrations/: 20240101000000_init.sql
orchestrator/src/: config.rs  db.rs  error.rs  main.rs  middleware.rs  models.rs  redis_client.rs
orchestrator/src/agents/: action.rs  decision.rs  mod.rs  planner.rs  retriever.rs  summarizer.rs
orchestrator/src/api/: actions.rs  ingest.rs  mod.rs  query.rs  sources.rs
services/code-interpreter/: Dockerfile  main.py
services/embedding/: Dockerfile  main.py  requirements.txt
services/ingestion/: Dockerfile  main.py  requirements.txt
services/ingestion/src/: chunker.py  extractors.py
services/vector-db/: Dockerfile  main.py  requirements.txt
