[workspace]
resolver = "2"
members = ["orchestrator"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[workspace.dependencies]
# Web framework
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1"

# --- EMAIL & HTTP (Strictly native-tls for Gmail compatibility) ---
# We disable default features to prevent rustls from sneaking in
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "multipart", "native-tls"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1", "tokio1-native-tls"] }

# Database (Aligned to use native-tls to avoid conflict)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "json", "uuid", "chrono"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"

# Security
jsonwebtoken = "9.2"
bcrypt = "0.15"

# WebSocket
tokio-tungstenite = "0.21"