[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
warp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# --- THE CURE: Force Native TLS ---
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "native-tls", "stream"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1", "tokio1-native-tls"] }

sqlx = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
futures = { workspace = true }
prometheus = "0.13"
governor = "0.6"